<resources>
    <string name="app_name">Dealer Pay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="in_progress">In Progress</string>
    <string name="requested">Requested</string>
    <string name="completed">Completed</string>
    <string name="amount">$648</string>
    <string name="user_name">Bessie</string>
    <string name="pay">Pay</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="account_setings">Account Setings</string>
    <string name="departement">Department</string>
    <string name="transaction">Transactions</string>
    <string name="options">Options</string>
    <string name="pay_amount">Pay Amount</string>
    <string name="sale_amount">Sale Amount</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address_one">Address 1</string>
    <string name="address_two">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="process_scale">Process Scale</string>
    <string name="mail_address">Email Address</string>
    <string name="send_request">Send Request</string>
    <string name="enter_sale_amount">Enter Sale Amount</string>
    <string name="enter_pay_share_amount">Enter Pay Share Amount</string>
    <string name="send_via">Send Via</string>
    <string name="next">Next</string>
    <string name="payment_request">Payment Request</string>
    <string name="transaction_history">Transaction History</string>
    <string name="phone">Phone</string>
    <string name="card_payment">Card Payment</string>
    <string name="select_an_item">Select an Item</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="an_item_ha_been_selected">An Item ha been Selected</string>
    <string name="search_transactions">Search Transactions</string>
    <string name="title_activity_main_id_tech">MainActivityIdTech</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <!-- CLEARNET INTEGRATION ANDROID -->

    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <color name="gray">#ff0ff000</color>

    <string name="action_connect">Connect</string>
    <string name="action_switch">Card Readers</string>
    <string name="action_change_reader">Select reader type</string>
    <string name="action_product_info">Product Info.</string>
    <string name="action_sdk_info">SDK Info.</string>
    <string name="action_autoconfig">Start AutoConfig</string>
    <string name="action_exit">Exit</string>

    <string name="lbl_sdk_info">SDK info</string>
    <string name="lbl_amount">Amount</string>
    <string name="lbl_connect">Connect Reader</string>
    <string name="lbl_swipe_card">Pay</string>
    <string name="lbl_command">Command</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="logoDesc">Clearent Logo</string>

    <string-array name="reader_type">
        <item>VP3300 - Audio Jack</item>
        <item>VP3300 - Bluetooth</item>
    </string-array>


    <string name="menu_charge">Pay</string>
    <string name="menu_configure">Settings</string>

    <string name="title_home">Home</string>
    <string name="title_configure">Settings</string>
    <string name="title_cardReader">Payment</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="menu_bluetooth_scan">Select IDTech Reader</string>
</resources>