<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ui.HomeFragment">


    <TextView
        android:id="@+id/tv_all"
        android:layout_width="0dp"
        android:textColor="@color/white"
        android:layout_height="@dimen/_25sdp"
        android:gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/all"
        android:background="@drawable/textview_bg"
        app:layout_constraintEnd_toStartOf="@+id/tv_inProgress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_inProgress"
        android:layout_width="0dp"
        android:text="@string/in_progress"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_height="@dimen/_25sdp"
        android:gravity="center"
        android:background="@drawable/textview_bg"
        app:layout_constraintBottom_toBottomOf="@id/tv_all"
        app:layout_constraintEnd_toStartOf="@+id/tv_requested"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_all"
        app:layout_constraintTop_toTopOf="@+id/tv_all" />

    <TextView
        android:id="@+id/tv_requested"
        android:layout_width="0dp"
        android:textColor="@color/white"
        android:layout_height="@dimen/_25sdp"
        android:gravity="center"
        android:layout_marginLeft="@dimen/_5sdp"
        android:text="@string/requested"
        android:background="@drawable/textview_bg"
        app:layout_constraintBottom_toBottomOf="@id/tv_all"
        app:layout_constraintEnd_toStartOf="@+id/tv_completed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_inProgress"
        app:layout_constraintTop_toTopOf="@+id/tv_all" />

    <TextView
        android:id="@+id/tv_completed"
        android:layout_width="0dp"
        android:textColor="@color/white"
        android:layout_height="@dimen/_25sdp"
        android:gravity="center"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:background="@drawable/textview_bg"
        android:text="@string/completed"
        app:layout_constraintBottom_toBottomOf="@id/tv_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_requested"
        app:layout_constraintTop_toTopOf="@+id/tv_all" />


    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_all"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/search_view_bg"
        android:layout_marginTop="@dimen/_10sdp"
        app:searchIcon="@drawable/ic_baseline_search_24"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_transaction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/home_cards"
        app:layout_constraintTop_toBottomOf="@+id/search_view"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>