<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.requestPayment.PaymentRequestOne">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_30sdp"

            >




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/department_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="35dp"
        android:hint="@string/departement"
        android:textColorHint="@color/green"
        app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
        app:boxCornerRadiusBottomStart="@dimen/_20sdp"
        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
        app:boxCornerRadiusTopStart="@dimen/_20sdp"
        app:boxStrokeColor="@color/outer_line"
        app:endIconDrawable="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:endIconMode="custom"
        app:endIconTint="@color/green"
        app:expandedHintEnabled="false"        app:hintEnabled="true"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_select_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/select_an_item"
            android:textColorHint="@color/white"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transaction_type_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="35dp"
        android:hint="@string/transaction"
        android:textColorHint="@color/green"
        app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
        app:boxCornerRadiusBottomStart="@dimen/_20sdp"
        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
        app:boxCornerRadiusTopStart="@dimen/_20sdp"
        app:boxStrokeColor="@color/outer_line"
        app:endIconDrawable="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:endIconMode="custom"
        app:endIconTint="@color/green"
        app:expandedHintEnabled="false"        app:hintEnabled="true"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/department_layout"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_transaction_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="@color/white"
            android:hint="@string/select_an_item"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/options_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="35dp"
        android:hint="@string/options"
        android:textColorHint="@color/green"
        app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
        app:boxCornerRadiusBottomStart="@dimen/_20sdp"
        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
        app:boxCornerRadiusTopStart="@dimen/_20sdp"
        app:boxStrokeColor="@color/outer_line"
        app:endIconDrawable="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:endIconMode="custom"
        app:endIconTint="@color/green"
        app:expandedHintEnabled="false"        app:hintEnabled="true"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_type_text_layout"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_options_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="@color/white"
            android:hint="@string/an_item_ha_been_selected"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rectangle_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/app_theme_color_2"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_layout"
        app:strokeColor="@color/outer_line">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_10sdp"
            android:background="@android:color/transparent">

            <EditText
                android:id="@+id/et_saleAmount"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:textColorHint="@color/white"
                android:paddingStart="@dimen/_4sdp"
                android:textColor="@color/white"
                android:fontFamily="@font/sfprotext_regular"
                android:background="@drawable/edit_text_bg"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:hint="@string/enter_sale_amount"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_14sdp"
                />

            <EditText
                android:id="@+id/pay_shareAmount"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/enter_pay_share_amount"
                android:paddingStart="@dimen/_4sdp"
                android:textColor="@color/white"
                android:fontFamily="@font/sfprotext_regular"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/et_saleAmount"
                app:layout_constraintStart_toStartOf="@+id/et_saleAmount"
                app:layout_constraintTop_toBottomOf="@id/et_saleAmount" />






        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/send_via"
        android:textColorHint="@color/green"
        app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
        app:boxCornerRadiusBottomStart="@dimen/_20sdp"
        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
        app:boxCornerRadiusTopStart="@dimen/_20sdp"
        app:boxStrokeColor="@color/outer_line"
        app:endIconDrawable="@drawable/ic_baseline_alternate_email_24"
        app:endIconMode="custom"
        app:endIconTint="@color/green"
        app:expandedHintEnabled="false"        app:hintEnabled="true"
        android:layout_marginTop="@dimen/_29sdp"
        app:hintTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_4">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/green"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:text="@string/next"
        android:layout_marginTop="90dp"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>